force-app/main/default/objects/Note__c/fields/Etape__c.field-meta.xml
<CustomField>
    <fullName>Etape__c</fullName>
    <label>Etape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Etape1</fullName>
            </value>
            <value>
                <fullName>Etape2</fullName>
            </value>
            <value>
                <fullName>Etape3</fullName>
            </value>
            <value>
                <fullName>Etape4</fullName>
            </value>
            <value>
                <fullName>Etape5</fullName>
            </value>
            <value>
                <fullName>Etape6</fullName>
            </value>
            <value>
                <fullName>Etape7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>