force-app/main/default/objects/Note__c/fields/Severite__c.field-meta.xml
<CustomField>
    <fullName>Severite__c</fullName>
    <label>Severite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eleve</fullName>
            </value>
            <value>
                <fullName>Moyen</fullName>
            </value>
            <value>
                <fullName>Faible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>