force-app/main/default/objects/Note__c/fields/Step_Rank__c.field-meta.xml
<CustomField>
    <fullName>Step_Rank__c</fullName>
    <label>Step Rank</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>