force-app/main/default/objects/Note__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Etape__c</columns>
    <columns>Step_Rank__c</columns>
    <columns>Description__c</columns>
    <columns>Severite__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>